# cc-cw

./: .gitignore  ast.cpp  ast.h  listreverse.p  toy.cpp
grammar/: AstVisitor.cpp  AstVisitor.h  CMakeLists.txt  ObjectPascalLexer.g4  ObjectPascalParser.g4  ast.cpp  ast.h  inc.c  inc.cpp  main.cpp  run.sh  start-grammar.txt  text.txt
grammar/.antlr/: ObjectPascalLexer.interp  ObjectPascalLexer.java  ObjectPascalLexer.tokens  ObjectPascalParser.interp  ObjectPascalParser.java  ObjectPascalParser.tokens
grammar/antlr4-runtime/: ObjectPascalLexer.cpp  ObjectPascalLexer.h  ObjectPascalLexer.interp  ObjectPascalLexer.tokens
grammar/libs/: AstVisiton.h  ObjectPascalLexer.cpp  ObjectPascalLexer.h  ObjectPascalLexer.interp  ObjectPascalLexer.tokens  ObjectPascalParser.cpp  ObjectPascalParser.h  ObjectPascalParser.interp  ObjectPascalParser.tokens  ObjectPascalParserBaseVisitor.cpp  ObjectPascalParserBaseVisitor.h  ObjectPascalParserVisitor.cpp  ObjectPascalParserVisitor.h  listreverse.p
